--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -12,7 +12,8 @@
     </script>
 
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>News List</title>
 </head>
 <body>
 
