event 코드 gtag로 수정

--- a/news/templates/news/detail.html
+++ b/news/templates/news/detail.html
@@ -17,6 +17,6 @@
 </head>
 <body>
 <p>{{ post.post_detail }}</p>
-<a class="button" href="javascript:history.back()" onclick="ga('send','event','button', 'click', 'Back to List', '{{ post.post_title }}')">Back to List</a>
+<a class="button" href="javascript:history.back()" onclick="gtag('send','event','button', 'click', 'Back to List', '{{ post.post_title }}')">Back to List</a>
 </body>
 </html>
