--- a/news/templates/news/detail.html
+++ b/news/templates/news/detail.html
@@ -17,6 +17,6 @@
 </head>
 <body>
 <p>{{ post.post_detail }}</p>
-<a class="button" href="javascript:history.back()" onclick="gtag('send','event','button', 'click', 'Back to List', '{{ post.post_title }}')">Back to List</a>
+<a class="button" href="javascript:history.back()" onclick="gtag('event','click', {'event_category':'button', 'event_label':'Back to List', 'value':'{{ post.post_title }}'})">Back to List</a>
 </body>
 </html>
